--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(db_sdk)
 set(CMAKE_SYSTEM_NAME Linux)
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 2.8.0)
 
 #compile flags
 set(CMAKE_C_FLAGS "-O0 -g -ggdb -fPIC -std=gnu99")
@@ -8,8 +8,18 @@ set(CMAKE_CXX_FLAGS "-O0 -g -ggdb -fPIC -std=c++0x")
 
 # build the .so
 include_directories(${PROJECT_SOURCE_DIR}/src)
-aux_source_directory(./src/mysql/Ctmysql SRC_DIR)
+aux_source_directory(./src/mysql SRC_DIR)
 aux_source_directory(./src/api API_SRC_DIR)
 add_library(db_sdk SHARED ${SRC_DIR} ${API_SRC_DIR})
 target_link_libraries(db_sdk mysqlclient)
+
+#build exe
+ 
+set(LIB_OUT_DOR ${PROJECT_SOURCE_DIR}/../build)
+link_directories(${LIB_OUT_DOR})
+include_directories(./src)
+set(source_file test/test.cpp)
+add_executable(test ${source_file})
+
+target_link_libraries(test db_sdk)
 
