--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ set(CMAKE_SYSTEM_NAME Linux)
 cmake_minimum_required(VERSION 2.8.0)
 
 #compile flags
-set(CMAKE_C_FLAGS "-O0 -g -ggdb -fPIC -std=gnu99")
-set(CMAKE_CXX_FLAGS "-O0 -g -ggdb -fPIC -std=c++0x")
+set(CMAKE_C_FLAGS   "-Wall -O0 -g -ggdb -fPIC -std=gnu99 ")
+set(CMAKE_CXX_FLAGS "-Wall -O0 -g -ggdb -fPIC -std=c++0x")
 
 # build the .so
 include_directories(${PROJECT_SOURCE_DIR}/src)
