--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O0 -g -ggdb -fPIC -std=c++0x")
 include_directories(${PROJECT_SOURCE_DIR}/src)
 aux_source_directory(./src/mysql SRC_DIR)
 aux_source_directory(./src/api API_SRC_DIR)
-add_library(db_sdk SHARED ${SRC_DIR} ${API_SRC_DIR})
+aux_source_directory(./src/basic LOG_SRC_DIR)
+add_library(db_sdk SHARED ${SRC_DIR} ${API_SRC_DIR} ${LOG_SRC_DIR})
 target_link_libraries(db_sdk mysqlclient)
 
 #build exe
