--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ set(CMAKE_SYSTEM_NAME Linux)
 cmake_minimum_required(VERSION 2.8.0)
 
 #compile flags
+set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS} -Wall -O0 -g -ggdb -fPIC -std=gnu99 ")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O0 -g -ggdb -fPIC -std=c++0x")
 
